[package]
description = "Created with Anchor"
edition = "2018"
name = "token-lock"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_lock"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
